styles.css
html {
    line-height: 1.15;
    -ms-text-size-adjust: 100%;
    -webkit-text-size-adjust: 100%
}

body {
    margin: 0
}

article,
aside,
footer,
header,
nav,
section {
    display: block
}

h1 {
    font-size: 2em;
    margin: .67em 0
}

figcaption,
figure,
main {
    display: block
}

figure {
    margin: 1em 40px
}

hr {
    box-sizing: content-box;
    height: 0;
    overflow: visible
}

pre {
    font-family: monospace, monospace;
    font-size: 1em
}

a {
    background-color: transparent;
    -webkit-text-decoration-skip: objects
}

abbr[title] {
    border-bottom: none;
    text-decoration: underline;
    text-decoration: underline dotted
}

b,
strong {
    font-weight: inherit
}

b,
strong {
    font-weight: bolder
}

code,
kbd,
samp {
    font-family: monospace, monospace;
    font-size: 1em
}

dfn {
    font-style: italic
}

mark {
    background-color: #ff0;
    color: #000
}

small {
    font-size: 80%
}

sub,
sup {
    font-size: 75%;
    line-height: 0;
    position: relative;
    vertical-align: baseline
}

sub {
    bottom: -.25em
}

sup {
    top: -.5em
}

audio,
video {
    display: inline-block
}

audio:not([controls]) {
    display: none;
    height: 0
}

img {
    border-style: none
}

svg:not(:root) {
    overflow: hidden
}

button,
input,
optgroup,
select,
textarea {
    font-family: sans-serif;
    font-size: 100%;
    line-height: 1.15;
    margin: 0
}

button,
input {
    overflow: visible
}

button,
select {
    text-transform: none
}

button,
html [type=button],
[type=reset],
[type=submit] {
    -webkit-appearance: button
}

button::-moz-focus-inner,
[type=button]::-moz-focus-inner,
[type=reset]::-moz-focus-inner,
[type=submit]::-moz-focus-inner {
    border-style: none;
    padding: 0
}

button:-moz-focusring,
[type=button]:-moz-focusring,
[type=reset]:-moz-focusring,
[type=submit]:-moz-focusring {
    outline: 1px dotted ButtonText
}

fieldset {
    padding: .35em .75em .625em
}

legend {
    box-sizing: border-box;
    color: inherit;
    display: table;
    max-width: 100%;
    padding: 0;
    white-space: normal
}

progress {
    display: inline-block;
    vertical-align: baseline
}

textarea {
    overflow: auto
}

[type=checkbox],
[type=radio] {
    box-sizing: border-box;
    padding: 0
}

[type=number]::-webkit-inner-spin-button,
[type=number]::-webkit-outer-spin-button {
    height: auto
}

[type=search] {
    -webkit-appearance: textfield;
    outline-offset: -2px
}

[type=search]::-webkit-search-cancel-button,
[type=search]::-webkit-search-decoration {
    -webkit-appearance: none
}

::-webkit-file-upload-button {
    -webkit-appearance: button;
    font: inherit
}

details,
menu {
    display: block
}

summary {
    display: list-item
}

canvas {
    display: inline-block
}

template {
    display: none
}

[hidden] {
    display: none
}

html {
    box-sizing: border-box;
}

*,
*:before,
*:after {
    box-sizing: inherit
}

.sr-only {
    position: absolute;
    width: 1px;
    height: 1px;
    margin: -1px;
    border: 0;
    padding: 0;
    white-space: nowrap;
    clip-path: inset(100%);
    clip: rect(0 0 0 0);
    overflow: hidden;
}

/* My styles */

/* temp border */

html * {
    border: 1px solid red;
    color: #232323;
    font-size: 16px;
}

body {
    font-family: 'Cabin', sans-serif;
    font-size: 1.125 rem;
    line-height: 29px;
    text-align: center;
    background: #EAEDF4;
}

img {
    max-width: 100%;
    height: auto;
    display: block;
}

.wrapper {
    max-width: 1280px;
    width: 90%;
    margin: 0 auto;
}

ul {
    margin: 0;
    padding: 0;
    list-style: none;
}

ul a {
    text-decoration: none;
}


/* Additional styles

Accent colour: #FDC800 // (253, 200, 0)
Black shade : #232323 // (35, 35, 35)
Background colour: #EAEDF4 // (234, 237, 244)
White shade: #F8F8F8 // (248, 248, 248)

font-family: 'Cabin', sans-serif;
font-family: 'Great Vibes', cursive;

*/

/* header styles */

header {
    background-image: url(./tasty-assets/asset-1.jpg);
    background-size: cover;
    background-repeat: no-repeat;
    background-position-x: 50%;
    height: 100vh;
}

header .wrapper {
    display: flex;
    flex-direction: column;
    height: 100%;
}

.header-logo {
    font-family: 'Great Vibes', cursive;
    font-size: 3.4375rem;
}

nav.top-bar {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding-top: 30px;
}

nav.topbar>* {
    width: 40%;
}

nav ul {
    display: flex;
}

nav li {
    margin: 0 20px;
    font-family: 'Cabin', sans-serif;
    font-size: 1.125rem;
    font-weight: 700;
}

nav li:nth-child(4) {
    margin-right: 0;
}

/* feature */

header .feature {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    height: 100%;
    line-height: 1;
}

.feature h1 {
    margin: 0;
    font-family: 'Great Vibes', cursive;
    font-size: 7.5rem;
    font-weight: 400;
}

.feature span {
    font-size: 1.5rem;
    font-weight: 700;
    text-transform: uppercase;
}

/* about styles */

.about {
    padding: 3rem 10rem;
}

.about h2 {
    font-family: 'Great Vibes', cursive;
    font-size: 2.625rem;
    font-weight: 400;
    line-height: 1;
}

.about p {
    padding: 0 330px;
}

.btn {
    display: inline-block;
    background-color: #FDC800;
    font-size: 1.125rem;
    font-weight: 700;
    text-align: center;
    text-decoration: none;
    padding: 5px 25px;
    margin-top: 10px;
}

/* quick links section */

.quick-links {
    background: #232323;
}

.quick-links ul {
    display: flex;
    justify-content: center;
    align-items: center;
}

.quick-links a {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin: 100px;
}

.quick-links li {
    flex-basis: 20%;

}

.quick-links span {
    font-weight: 700;
    font-size: 18px;
    text-align: center;
    color: #fff;
    padding: 0 40px;
}

.quick-links img {
    max-width: 40%;
    margin: 20px 0;
}

/* gallery section */

.gallery {
    background: #F8F8F8;
    padding: 100px 0;
}

.gallery ul {
    display: flex;
    justify-content: space-between;
}

.gallery li {
    flex-basis: 31%;
}

/* blog styles */

.blog {}

.blog .wrapper {
    display: flex;
    flex-wrap: wrap;
}

.blog .wrapper>* {
    width: 50%;
    flex-shrink: 1;
    height: auto;
}

.blog .wrapper :nth-child(3) {
    order: 2;
}

.blog .wrapper :nth-child(4) {
    order: 1;
}

/* .blog .wrapper div {
    display: flex;
    flex-direction: column;
    justify-content: center;
} */

.blog .wrapper div {
    margin: auto 0;
    padding: 80px 100px;
}

.blog-image-container {
    width: 50vw;
}

/* Cook styles */

.cook {
    background: #F8F8F8;
}

.cook .wrapper {
    display: flex;
    padding: 100px 0;
}

.cook h2 {
    margin-top: 0;
    font-family: 'Great Vibes', cursive;
    font-size: 2.625rem;
    font-weight: 400;
    line-height: 1.1;
}

.cook-text-container {
    text-align: left;
    /* padding-right: 100px; */
}

.cook-image-container {
    margin-right: 50px;
}

/* contact styles */

.contact {
    background: #232323;
}

.contact li,
.contact span,
.contact p {
    color: white;
}

